// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mvcc.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`mvcc.sql > line 10 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 29,
                "sval": {
                  "sval": "false",
                },
              },
            },
          ],
          "is_local": true,
          "kind": "VAR_SET_VALUE",
          "name": "enable_seqscan",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`mvcc.sql > line 12 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 34,
                "sval": {
                  "sval": "false",
                },
              },
            },
          ],
          "is_local": true,
          "kind": "VAR_SET_VALUE",
          "name": "enable_indexonlyscan",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`mvcc.sql > line 13 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 31,
                "sval": {
                  "sval": "false",
                },
              },
            },
          ],
          "is_local": true,
          "kind": "VAR_SET_VALUE",
          "name": "enable_bitmapscan",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`mvcc.sql > line 14 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 136,
            "relname": "clean_aborted_self",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "key",
                "is_local": true,
                "location": 155,
                "typeName": {
                  "location": 159,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "data",
                "is_local": true,
                "location": 164,
                "typeName": {
                  "location": 169,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`mvcc.sql > line 18 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "btree",
          "idxname": "clean_aborted_self_key",
          "indexParams": [
            {
              "IndexElem": {
                "name": "key",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 40,
            "relname": "clean_aborted_self",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`mvcc.sql > line 19 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 33,
                "name": "key",
              },
            },
            {
              "ResTarget": {
                "location": 38,
                "name": "data",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "clean_aborted_self",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 52,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 56,
                          "sval": {
                            "sval": "just to allocate metapage",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`mvcc.sql > line 20 1`] = `[Error: syntax error at or near "\\"]`;

exports[`mvcc.sql > line 39 1`] = `[Error: syntax error at or near ":"]`;

exports[`mvcc.sql > line 43 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_ROLLBACK",
        },
      },
    },
  ],
  "version": 160001,
}
`;
